--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -9,10 +9,22 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3.8.8 64-bit"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.8",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "interpreter": {
+      "hash": "07efdcd4b820c98a756949507a4d29d7862823915ec7477944641bea022f4f62"
     }
   },
   "cells": [
@@ -27,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "source": [
         "record = {'1001': {'name': 'wafer', 'pr': 20, 'qn': 1000},\r\n",
         "              '1002': {'name': 'Drink', 'pr': 85, 'qn': 200},\r\n",
@@ -91,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "source": [
         "import json\r\n",
         "js = json.dumps(record)\r\n",
@@ -116,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "source": [
         "fd = open(\"record.json\",'r')\r\n",
         "r = fd.read()\r\n",
@@ -140,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "source": [
         "import pandas as pd\r\n",
         "from IPython.display import display"
@@ -161,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "source": [
         "user_id,password_id = \"admin\",123\r\n",
         "\r\n",
@@ -193,6 +205,7 @@
         "                display(ds.transpose())\r\n",
         "              elif(ask_user == \"No\"):\r\n",
         "                print(\"Okay, no issues\")\r\n",
+        "              prod_id = str(input(\"Enter product id: \"))\r\n",
         "              del record[product_id]\r\n",
         "              js_del = json.dumps(record)\r\n",
         "              fd = open(\"record.json\",'w')\r\n",
@@ -235,9 +248,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your role : purchaser\n",
-            "Hello Purchaser\n",
-            "Do you want to view the Dataset? Enter Yes or No: Yes\n",
+            "You've successfully logged in as Admin\n",
             "The Record View : \n"
           ]
         },
@@ -490,16 +501,14 @@
           "metadata": {}
         },
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter the product_Id of the item you want to purchase: 1005\n",
-            "Enter the quantity : 10\n",
-            "***********************************\n",
-            "Product:  pasta\n",
-            "Price:  200\n",
-            "***********************************\n",
-            "Billing Amount:  2000\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'product_id' is not defined",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-7-bfffef1eb2ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Okay, no issues\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m               \u001b[0mprod_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Enter product id: \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m               \u001b[1;32mdel\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mproduct_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m               \u001b[0mjs_del\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m               \u001b[0mfd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"record.json\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'product_id' is not defined"
           ]
         }
       ],
