--- a/source_code.ipynb
+++ b/source_code.ipynb
@@ -173,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "source": [
         "user_id,password_id = \"admin\",123\r\n",
         "\r\n",
@@ -205,7 +205,7 @@
         "                display(ds.transpose())\r\n",
         "              elif(ask_user == \"No\"):\r\n",
         "                print(\"Okay, no issues\")\r\n",
-        "              prod_id = str(input(\"Enter product id: \"))\r\n",
+        "              product_id = str(input(\"Enter product id: \"))\r\n",
         "              del record[product_id]\r\n",
         "              js_del = json.dumps(record)\r\n",
         "              fd = open(\"record.json\",'w')\r\n",
@@ -241,7 +241,7 @@
         "    js = json.dumps(record)\r\n",
         "    fd = open(\"record.json\",'w')\r\n",
         "    fd.write(js)\r\n",
-        "    fd.close()\r\n"
+        "    fd.close()"
       ],
       "outputs": [
         {
@@ -501,14 +501,10 @@
           "metadata": {}
         },
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'product_id' is not defined",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-7-bfffef1eb2ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Okay, no issues\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m               \u001b[0mprod_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Enter product id: \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m               \u001b[1;32mdel\u001b[0m \u001b[0mrecord\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mproduct_id\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m               \u001b[0mjs_del\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m               \u001b[0mfd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"record.json\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'product_id' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "You've successfully deleted the Item\n"
           ]
         }
       ],
