--- a/source_code.ipynb
+++ b/source_code.ipynb
@@ -13,7 +13,15 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.8"
+      "version": "3.8.8",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
     },
     "interpreter": {
       "hash": "07efdcd4b820c98a756949507a4d29d7862823915ec7477944641bea022f4f62"
@@ -31,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "source": [
         "record = {'1001': {'name': 'wafer', 'pr': 20, 'qn': 1000},\r\n",
         "              '1002': {'name': 'Drink', 'pr': 85, 'qn': 200},\r\n",
@@ -95,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "source": [
         "import json\r\n",
         "js = json.dumps(record)\r\n",
@@ -120,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "source": [
         "fd = open(\"record.json\",'r')\r\n",
         "r = fd.read()\r\n",
@@ -144,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "source": [
         "import pandas as pd\r\n",
         "from IPython.display import display"
@@ -165,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "source": [
         "user_id,password_id = \"Mohammed Abdul Sohail\",9502463435\r\n",
         "\r\n",
@@ -252,24 +260,267 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your role : admin\n",
-            "Enter Username : admin\n",
-            "Enter Password : 123\n",
-            "You've successfully logged in as Admin\n",
-            "Do you want to add or delete : delete\n",
-            "Do you want to view the Dataset? Enter Yes or No: No\n",
-            "Okay, no issues\n",
-            "Enter product id: 1031\n",
-            "You've successfully deleted the Item\n",
-            "Do you want to add or delete a file again? Enter Yes or No: Yes\n",
-            "You've successfully logged in as Admin\n",
-            "Do you want to add or delete : delete\n",
-            "Do you want to view the Dataset? Enter Yes or No: No\n",
-            "Okay, no issues\n",
-            "Enter product id: 1022\n",
-            "You've successfully deleted the Item\n",
-            "Do you want to add or delete a file again? Enter Yes or No: No\n",
-            "Thank you for logging in\n"
+            "Hello Purchaser....\n",
+            "The Record View : \n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>pr</th>\n",
+              "      <th>qn</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1001</th>\n",
+              "      <td>wafer</td>\n",
+              "      <td>20</td>\n",
+              "      <td>1000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1002</th>\n",
+              "      <td>Drink</td>\n",
+              "      <td>85</td>\n",
+              "      <td>200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1003</th>\n",
+              "      <td>Candy</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1004</th>\n",
+              "      <td>brown rice</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1005</th>\n",
+              "      <td>pasta</td>\n",
+              "      <td>200</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1006</th>\n",
+              "      <td>eggs[dozen]</td>\n",
+              "      <td>89</td>\n",
+              "      <td>1000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1007</th>\n",
+              "      <td>dark chocolate</td>\n",
+              "      <td>599</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1008</th>\n",
+              "      <td>donut</td>\n",
+              "      <td>150</td>\n",
+              "      <td>300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1009</th>\n",
+              "      <td>ice-cream</td>\n",
+              "      <td>280</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1010</th>\n",
+              "      <td>shoes</td>\n",
+              "      <td>2800</td>\n",
+              "      <td>200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1011</th>\n",
+              "      <td>clock</td>\n",
+              "      <td>299</td>\n",
+              "      <td>300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1012</th>\n",
+              "      <td>almonds</td>\n",
+              "      <td>299</td>\n",
+              "      <td>50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1013</th>\n",
+              "      <td>cake</td>\n",
+              "      <td>300</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1014</th>\n",
+              "      <td>cookie</td>\n",
+              "      <td>50</td>\n",
+              "      <td>250</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1015</th>\n",
+              "      <td>milk</td>\n",
+              "      <td>79</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1016</th>\n",
+              "      <td>cheese</td>\n",
+              "      <td>299</td>\n",
+              "      <td>450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1017</th>\n",
+              "      <td>corn flakes</td>\n",
+              "      <td>399</td>\n",
+              "      <td>400</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1018</th>\n",
+              "      <td>bread</td>\n",
+              "      <td>199</td>\n",
+              "      <td>2000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1019</th>\n",
+              "      <td>honey</td>\n",
+              "      <td>200</td>\n",
+              "      <td>59</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1020</th>\n",
+              "      <td>peanut butter</td>\n",
+              "      <td>599</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1021</th>\n",
+              "      <td>coffee powder</td>\n",
+              "      <td>150</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1022</th>\n",
+              "      <td>milk shake</td>\n",
+              "      <td>69</td>\n",
+              "      <td>2000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1023</th>\n",
+              "      <td>lemonade</td>\n",
+              "      <td>59</td>\n",
+              "      <td>2000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1024</th>\n",
+              "      <td>water bottle</td>\n",
+              "      <td>29</td>\n",
+              "      <td>1995</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1026</th>\n",
+              "      <td>candy bar</td>\n",
+              "      <td>10</td>\n",
+              "      <td>10000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1027</th>\n",
+              "      <td>apple pie</td>\n",
+              "      <td>199</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1028</th>\n",
+              "      <td>pizza</td>\n",
+              "      <td>399</td>\n",
+              "      <td>500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1029</th>\n",
+              "      <td>pancake</td>\n",
+              "      <td>295</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1030</th>\n",
+              "      <td>biscuits</td>\n",
+              "      <td>25</td>\n",
+              "      <td>1000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031</th>\n",
+              "      <td>Lays</td>\n",
+              "      <td>20</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                name    pr     qn\n",
+              "1001           wafer    20   1000\n",
+              "1002           Drink    85    200\n",
+              "1003           Candy     5   1000\n",
+              "1004      brown rice  2000    300\n",
+              "1005           pasta   200    100\n",
+              "1006     eggs[dozen]    89   1000\n",
+              "1007  dark chocolate   599    500\n",
+              "1008           donut   150    300\n",
+              "1009       ice-cream   280    100\n",
+              "1010           shoes  2800    200\n",
+              "1011           clock   299    300\n",
+              "1012         almonds   299     50\n",
+              "1013            cake   300    100\n",
+              "1014          cookie    50    250\n",
+              "1015            milk    79    500\n",
+              "1016          cheese   299    450\n",
+              "1017     corn flakes   399    400\n",
+              "1018           bread   199   2000\n",
+              "1019           honey   200     59\n",
+              "1020   peanut butter   599    NaN\n",
+              "1021   coffee powder   150    NaN\n",
+              "1022      milk shake    69   2000\n",
+              "1023        lemonade    59   2000\n",
+              "1024    water bottle    29   1995\n",
+              "1026       candy bar    10  10000\n",
+              "1027       apple pie   199    500\n",
+              "1028           pizza   399    500\n",
+              "1029         pancake   295     40\n",
+              "1030        biscuits    25   1000\n",
+              "1031            Lays    20      0"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-----------------------------------\n",
+            "Product:  pasta\n",
+            "Price:  200\n",
+            "-----------------------------------\n",
+            "Billing Amount:  2000\n"
           ]
         }
       ],
@@ -283,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "source": [
         "from datetime import datetime\r\n",
         "now_method = datetime.now()\r\n",
@@ -296,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "source": [
         "sales={ui_prod : {'qn' : ui_quant, 'amount gained': record[ui_prod]['pr'] * ui_quant, 'time': currentTime}}"
       ],
@@ -316,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "source": [
         "js_sale = json.dumps(sales)\r\n",
         "\r\n",
@@ -331,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "source": [
         "with open(\"sales.json\", \"r+\") as file:\r\n",
         "\r\n",
